# AgentCommandTool

./: .gitignore  CLAUDE.md  README.md  blueprint.md  pyproject.toml
issues/: issue-001-path-traversal.md  issue-002-dangerous-pkill.md  issue-003-unsanitized-step-name.md
specs/: artifacts.md  blueprint.md  configuration.md  editor.md  implementation-plan.md  progress.md  scout-a.md  scout-b.md  task-lifecycle.md  verifier.md
src/act/: __init__.py  cli.py
tests/: __init__.py
tests/container/: __init__.py
tests/integration/: conftest.py  test_cancellation_flow.py  test_dry_run_flow.py  test_hard_stop_flow.py  test_infra_error_scout.py  test_infra_error_verifier.py  test_replan_flow.py  test_success_flow.py
tests/system/: __init__.py
tests/unit/: __init__.py  test_artifacts_cleanup.py  test_artifacts_context.py  test_artifacts_context_dir.py  test_artifacts_dirs.py  test_artifacts_manifest.py  test_artifacts_run_id.py  test_config_env.py  test_config_schema.py  test_config_validator.py  test_core_error_handling.py  test_core_logging.py  test_core_metrics.py  test_core_validation.py  test_editor_boundaries.py  test_editor_coordinator.py  test_editor_debug_loop.py  test_editor_dry_run.py  test_editor_editor.py  test_editor_exceptions.py  test_editor_outputs.py  test_editor_task.py  test_scouts_exceptions.py  test_scouts_file_filter.py  test_scouts_llm_client.py  test_scouts_retry.py  test_scouts_schemas.py  test_scouts_scout_a.py  test_scouts_scout_b.py  test_task_display.py  test_task_queue.py  test_task_retry.py  test_task_runner.py  test_task_state.py  test_verifier_container.py  test_verifier_exceptions.py  test_verifier_executor.py  test_verifier_logs.py  test_verifier_pipeline.py  (+1 more)
(+46 files in other folders)
